- https://github.com/eclipse-syson/syson/issues/1857[#1857] [diagrams] Fix an issue where existing graphical node could disappear when new graphical node was created.
- https://github.com/eclipse-syson/syson/issues/1865[#1865] [explorer] Fix focus loss on some characters in the _New object from text_ modal.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/1666[#1666] [export] Export `SatisfyRequirementUsage` in textual format.
- https://github.com/eclipse-syson/syson/issues/1653[#1653] [services] Improve service for creating root objects in a document so that it delegates non-SysML scenarios to the default service implementation.
- https://github.com/eclipse-syson/syson/issues/1735[#1735] [diagrams] Improve the performances of the visibility menu actions
- https://github.com/eclipse-syson/syson/issues/1702[#1702] [libraries] Provide a SysON version of the impact analysis tree.
- https://github.com/eclipse-syson/syson/issues/1746[#1746] [diagrams] When attempting to create a redundant `FeatureTyping` between elements which already have one, an informative message is displayed instead.
- https://github.com/eclipse-syson/syson/issues/1766[#1766] [diagrams] Also prevent the creation of redundant `Subsetting`, `Redefinition` and `Subclassifications`
- https://github.com/eclipse-syson/syson/issues/1765[#1765] [diagrams] Allow to create a `SatisfyRequirement` on `PartDefinition` or `PartUsage`.
A new compartment named _satisfy requirements_ has also been added to `PartDefinition` and `PartUsage` graphical nodes in diagrams.
- https://github.com/eclipse-syson/syson/issues/1762[#1762] [diagrams] Increase the default size of nodes.
- https://github.com/eclipse-syson/syson/issues/1752[#1752] [diagrams] In diagrams, hide the node displayed on the top of the diagram if the candidate compartment is not hidden.